# Contextualizing-Lectures

./: .gitignore  CHANGELOG.md  Contextualizing Lectures Proposal (1).pptx  README.md  ai_aligner.py  app.py  audio_processor.py  custom_audio.html  file_manager.py  handoff_notes.md  pdf_processor.py  pyproject.toml  requirements.txt  run.py  server.py
.agents/: AGENTS.md
core/: README.md  __init__.py  ai_aligner.py  audio_analysis.py  audio_processor.py  config.py  file_utils.py  llm_service.py  logging_setup.py  models.py  pdf_processor.py  pipeline.py  pptx_converter.py  schemas.py  storage.py  system_loader.py  video_aligner_test.py  video_processor.py
docs/: api-guide.md  architecture.md
docs/adr/: 0001-streamlit-to-fastapi-react-migration.md  0002-dual-pipeline-architecture.md  0003-programmatic-ocr-page-indexing.md  0004-use-uv-for-dependency-management.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: AudioPlayer.tsx  NoteCard.tsx  SettingsModal.tsx  SlideJumpPills.tsx  SlideTimeline.tsx  SlideViewer.tsx
frontend/src/hooks/: useWaveSurfer.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/src/utils/: boundaries.ts
frontend/src/views/: CreateSessionView.tsx  HomeView.tsx  LibraryView.tsx  ProcessingView.tsx  StudioView.tsx  UploadView.tsx
ui/: README.md  assets.py  components.py  dialogs.py  scripts.js  styles.css  views.py
