[project]
name = "contextualizing-lectures"
version = "1.1.5"
description = "FastAPI + React tool for contextualizing and aligning lectures with slides."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai-whisper>=20231117",
    "pymupdf>=1.23.0",
    "google-genai>=0.1.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "ruamel-yaml>=0.18.0",
    "opencv-python>=4.8.0",
    "scikit-image>=0.21.0",
    "imagehash>=4.3.1",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "websockets>=12.0",
    "numba>=0.60.0",
    "python-multipart",
]

[tool.uv]
default-groups = []
cache-dir = "S:\\.cache\\uv"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
